# learn_py

./: .gitignore  README.md
1essentials/: README.md
1essentials/ch1/: a1hello.py  a2print.py
1essentials/ch2/: a3literal.py  a4operators.py  a5variables.py  a6input.py
1essentials/ch3/: a10lists.py  a11list_operations.py  a12list_advanced.py  a7decision.py  a8loops.py  a9logical_bit.py
1essentials/ch4/: a13functions.py  a14scopes.py  a15tuples.py  a16dictionary.py
2essentials/: READEME.md
2essentials/ch1/1modules/: a1module.py  a2import.py  a3import.py  a4standard_modules.py
2essentials/ch1/2modules/: counted_module.py  main.py  module.py  notes.md
2essentials/ch1/pip/: content.md
2essentials/ch2/1strings/: content.md  string.py
2essentials/ch2/2exceptions/: content.md  handle.py  raise.py
2essentials/ch3/: a1firstclass.py  a2init.py  a3stack.py  a4adding_stack.py
2essentials/ch3/inheritance/: a1issubclass.py  a2isinstance.py  a3isoperator.py  a4super.py  a5class_variable.py  a6instance_variable.py
2essentials/ch3/properties/: a1instance_variables.py  a2class_variables.py  a3obj_class_dict.py  a4hasattr.py  a5class_innerlife.py  a6_str.py  content.md
2essentials/ch4/1iterator_generators/: a1intro.py  a2fib.py  a3yield.py  a4more_copmrehension.py  a5lambda.py  content.md
3poetry/: README.md
3poetry/demo-lib/: pyproject.toml
3poetry/fastapi-demo/: README.md  main.py  pyproject.toml
3poetry/pandas-demo/: main.py  pyproject.toml
3poetry/pandas-demo/pandas_demo/: pandas_ex.py
3poetry/pandas-demo/tests/: test_pandas_demo.py
(+6 files in other folders)
